--- a/NaoQt/NaoQt.qrc
+++ b/NaoQt/NaoQt.qrc
@@ -2,4 +2,7 @@
     <qresource prefix="/icon">
         <file>refresh.png</file>
     </qresource>
+    <qresource prefix="/decoding">
+        <file>packed_codebooks_aoTuV_603.bin</file>
+    </qresource>
 </RCC>
