Basic plugin loading, plugin ABI most likely finished

--- a/NaoQt/NaoQt.qrc
+++ b/NaoQt/NaoQt.qrc
@@ -1,8 +1,8 @@
 <RCC>
-    <qresource prefix="/icons">
+    <qresource prefix="/NaoQt">
         <file>Resources/refresh.png</file>
-    </qresource>
-    <qresource prefix="/decoding">
-        <file>Resources/packed_codebooks_aoTuV_603.bin</file>
+        <file>Resources/AboutNaoQt.html</file>
+        <file>Resources/Aboutlibnao.html</file>
+        <file>Resources/AboutPluginTemplate.html</file>
     </qresource>
 </RCC>
