--- a/NaoQt/NaoQt.qrc
+++ b/NaoQt/NaoQt.qrc
@@ -1,8 +1,10 @@
 <RCC>
     <qresource prefix="/NaoQt">
-        <file>Resources/refresh.png</file>
         <file>Resources/AboutNaoQt.html</file>
         <file>Resources/Aboutlibnao.html</file>
         <file>Resources/AboutPluginTemplate.html</file>
+        <file>Resources/AboutIcons8.html</file>
+        <file>Resources/icons/refresh.svg</file>
+        <file>Resources/icons/up.png</file>
     </qresource>
 </RCC>
